--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,21 @@
 html {
-	height: auto;
-	margin-left: 30px;
-	margin-right: 30px;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	background-color: #D3D3D3;
+	//background-color: #D3D3D3;
+	//margin-left: 50px;
+	//margin-right: 50px;
 }
 
-html body {
+body {
 	background-color: #fff;
-	min-height: 100%;
-	height: 100%;
-	border-radius: 25px;
 }
 
 .container-fluid {
 	background-color: #fff;
-	min-height: 100%;
 	height: 100%;
-	border-radius: 25px;
+}
 
+.container {
+	background-color: #fff;
+	height: 100%;
 }
 
 .page-header {
@@ -34,7 +30,7 @@ html body {
 .blog-post {
 	margin: auto;
 	text-align: center;
-	width: 50%;
+	width: 95%;
 }
 
 .blog-post em {
@@ -43,12 +39,8 @@ html body {
 }
 
 .blog-post p {
+	text-align: justify;
 	font-family: "Lucida Console", Monaco, monospace;
-}
-
-p {
-	padding-left: 50px;
-	text-align: left;
 }
 
 hr {
